<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
            android:orientation="vertical"
            android:background="#00bfd1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/start_color"
                    android:layout_weight="1"
                    android:text="@string/start_color"
                    android:layout_width="0dp"
                    android:background="@drawable/circle_bg"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/middle_color"
                    android:layout_weight="1"
                    android:text="@string/middle_color"
                    android:layout_width="0dp"
                    android:background="@drawable/circle_bg"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/end_color"
                    android:layout_weight="1"
                    android:text="@string/end_color"
                    android:layout_width="0dp"
                    android:background="@drawable/circle_bg"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/save_color"
                    android:layout_weight="1"
                    android:text="@string/save_color"
                    android:layout_width="0dp"
                    android:background="@drawable/circle_bg"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
                android:background="@drawable/play"
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/txt_tip"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Spinner
                    android:paddingLeft="10dp"
                    android:id="@+id/sp_chk"
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

            </Spinner>
        </LinearLayout>
        <TextView
                android:background="@drawable/play"
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/img_bg"
                    android:background="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
                android:background="#FFFFFF"
                android:text="@string/more_tip"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
        <ImageView
                android:src="@drawable/play"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>
    </LinearLayout>
</ScrollView>
